--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Internships completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/rishabhnmishra/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/josetomasbd/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
